# CS213_Assignment1

./: 1.cpp  10.cpp  4.cpp  7.cpp  A1_T1_S21_20230504.cpp  ALU.cpp  ALU.h  CPU.cpp  CPU.h  CU.cpp  CU.h  Freq. words in phishing Emails.txt  Memory.h  P11.cpp  P5.cpp  P8.cpp  PhshingEmail.txt  Problem12.cpp  Problem6.cpp  Problem9.cpp  README.md  Register.h  Task4and5.rar  arabic.txt  dictionary.txt  main.cpp
Islam's task 1/: 1.cpp  10.cpp  4.cpp  7.cpp  arabic.txt  dictionary.txt
Task2/: A1_T2_T3_S15_S21_S21_20230062_20230347_20230504.docx  CMakeLists.txt  main.cpp
Task2/A1_T2_T3_S15_S21_S21_20230062_20230347_20230504/: Gimini.cpp  Polynomial.h  chatgpt.cpp
Task2/Gimini/: CMakeLists.txt  Polynomial.cpp  Polynomial.h
mohammed Ali's task1/: Freq. words in phishing Emails.txt  P2.cpp  PhshingEmail.txt
task 4 & 5/: ALU.cpp  ALU.h  CMakeLists.txt  CPU.cpp  CPU.h  CU.cpp  CU.h  Machine.cpp  Machine.h  Memory.cpp  Memory.h  Register.cpp  Register.h  Test.cpp  Test.h  arbitarylab.cpp  main.cpp  test_running.cpp
y3zof's task1/: Problem12.cpp  Problem3.cpp  Problem6.cpp  Problem9.cpp
